--- a/IndustrialServices/Views/DashboardContributor/Index.cshtml
+++ b/IndustrialServices/Views/DashboardContributor/Index.cshtml
@@ -2,8 +2,24 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    Layout = "~/Views/Shared/_LayoutContributor.cshtml";
     ViewData["Title"] = "Dashboard";
+    var httpcontext = ViewContext.HttpContext;
+    string role = httpcontext.Session.GetString("Role");
+    if (string.IsNullOrEmpty(role))
+    {
+        // Session is expired or role is not set, redirect to login layout
+        Layout = null;
+
+        <script>
+            window.location.href = '@Url.Action("Index", "Login")';
+        </script>
+
+        return;
+    }
+    if (role == "Contributor")
+    {
+        Layout = "~/Views/Shared/_LayoutContributor.cshtml";
+    }
 }
 
 
