--- a/IndustrialServices/Views/Home/DetailFacultyMember.cshtml
+++ b/IndustrialServices/Views/Home/DetailFacultyMember.cshtml
@@ -77,9 +77,37 @@
                     <p style="color:white;font-family:Barlow;">
                         Monday - Friday (08:00 - 16:00)
                     </p>
+
                 </div>
 
                 <div class="col-lg-4 col-md-6 footer-contact">
+                    <h3>Contacts</h3>
+                    <p style="color:white;font-family:Barlow;">
+                        Call Center : (021) 5022722 <br />
+                        WhatsApp : 085156842086 (message only) <br />
+                        Email :  dpp@astrapolytechnic.ac.id <br /> <br />
+                    </p>
+                    <div class="socialmedia" style="gap:15px;">
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: midnightblue; border: none;width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://www.instagram.com/astrapolytechnic/', '_blank');">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #FF0000; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://www.youtube.com/c/PolmanAstrachannel', '_blank');">
+                            <i class="fab fa-youtube" style="font-size: 24px; color: white;"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #4267B2; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://www.facebook.com/Astrapolytechnic/', '_blank');">
+                            <i class="fab fa-facebook-f" style="font-size: 24px; color: white;"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #1DA1F2; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://twitter.com/PoliteknikAstra/', '_blank');">
+                            <i class="fab fa-twitter" style="font-size: 24px; color: white;"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #25D366; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://api.whatsapp.com/send/?phone=6281295582134', '_blank');">
+                            <i class="fab fa-whatsapp" style="font-size: 24px; color: white;"></i>
+                        </a>
+                    </div>
+
+
+
+                    <br />
                     <h3 style="font-family:Barlow;">Information</h3>
                     <div class="row">
                         <a>
@@ -88,12 +116,7 @@
                                 Astra Polytechnic Main Website <br />  <br />
                             </p>
                         </a>
-                        <h3>Contacts</h3>
-                        <p style="color:white;font-family:Barlow;">
-                            Call Center : (021) 5022722 <br />
-                            WhatsApp : 085156842086 (message only) <br />
-                            Email :  dpp@astrapolytechnic.ac.id <br /> <br />
-                        </p>
+
                     </div>
                 </div>
 
@@ -102,7 +125,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-12 d-flex align-items-stretch text-center">
-                    <span style="position: relative; left: 50%; transform: translateX(-50%);color:darkgray;font-family:Barlow;">Copyright © 2024 Department Training & Production Astra Polytechnic</span>
+                    <span style="position: relative; left: 50%; transform: translateX(-50%);color:darkgray;font-family:Barlow;">Copyright © 2024 Astra Polytechnic</span>
                 </div>
             </div>
         </div>
@@ -110,6 +133,19 @@
     </div>
 </footer><!-- End Footer -->
 
+<style>
+    .socialmedia {
+        display: flex;
+        position: relative;
+    }
+
+        .socialmedia a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+</style>
 <script>
     loadFacultyMemberDetails();
     function loadFacultyMemberDetails() {
