--- a/IndustrialServices/Views/Home/Produk.cshtml
+++ b/IndustrialServices/Views/Home/Produk.cshtml
@@ -9,7 +9,7 @@
             <h5 style="color: black; font-weight: 600; font-size: 36px; margin-bottom: 20px;font-family:Barlow;">Products</h5>
         </div>
         <div class="container-md">
-            <div class="row" id="data-list">
+            <div class="row g-4" id="data-list">
                 <div class="col-lg-4">
                     <div class="card" style="background-color: #3498db;">
                         <div class="card-body">
@@ -27,43 +27,75 @@
     </section>
 </section>
 
-<footer id="footer" style="color:#ffffff;">
+<footer id="footer" style="color:#ffffff;font-family:Barlow;">
 
     <div class="footer-top" style="background:#01529C;">
         <div class="container">
             <div class="row justify-content-center">
 
-                <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Address</h3>
+                <div class="col-lg-4 col-md-6 footer-contact">
+                    <h3 style="font-family:Barlow;">Astra Polytechnic</h3>
                     <a href="https://maps.app.goo.gl/xG12byCagHAPUSuY9" target="_blank">
-                        <p style="color:white;">
-                            Cikarang Campus <br>
-                            Jl. Gaharu Blok F3 Delta Silicon II Cibatu,<br>
+                        <p style="color:white;font-family:Barlow;">
+                            <strong>Cikarang Campus</strong> <br>
+                            Gaharu Street Block F3 Delta Silicon II, Cibatu,<br>
                             South Cikarang, Bekasi Regency, <br>
                             West Java 17530 <br><br>
+
+                            <strong>Sunter Campus</strong> <br>
+                            Astra International Public LLC Complex, Building B,<br>
+                            Gaya Motor Raya Street No. 8, Sunter II, <br>
+                            Jakarta 14330.<br><br>
 
                         </p>
                     </a>
                 </div>
 
-                <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Contacts</h3>
-                    <p style="color:white;">
-                        <strong>Phone:</strong><a href="https://wa.me/6285156842086" style="color: white; text-decoration: underline;" target="_blank"> +62 888 7765 9821</a><br>
-                        <strong>Email:</strong> dpp@@astra.polytechnic.ac.id<br>
+                <div class="col-lg-4 col-md-6 footer-contact">
+                    <h3 style="font-family:Barlow;">Time of Service</h3>
+                    <p style="color:white;font-family:Barlow;">
+                        Monday - Friday (08:00 - 16:00)
                     </p>
+
                 </div>
 
-                <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Information</h3>
+                <div class="col-lg-4 col-md-6 footer-contact">
+                    <h3>Contacts</h3>
+                    <p style="color:white;font-family:Barlow;">
+                        Call Center : (021) 5022722 <br />
+                        WhatsApp : 085156842086 (message only) <br />
+                        Email :  dpp@astrapolytechnic.ac.id <br /> <br />
+                    </p>
+                    <div class="socialmedia" style="gap:15px;">
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: midnightblue; border: none;width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://www.instagram.com/astrapolytechnic/', '_blank');">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #FF0000; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://www.youtube.com/c/PolmanAstrachannel', '_blank');">
+                            <i class="fab fa-youtube" style="font-size: 24px; color: white;"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #4267B2; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://www.facebook.com/Astrapolytechnic/', '_blank');">
+                            <i class="fab fa-facebook-f" style="font-size: 24px; color: white;"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #1DA1F2; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://twitter.com/PoliteknikAstra/', '_blank');">
+                            <i class="fab fa-twitter" style="font-size: 24px; color: white;"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #25D366; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://api.whatsapp.com/send/?phone=6281295582134', '_blank');">
+                            <i class="fab fa-whatsapp" style="font-size: 24px; color: white;"></i>
+                        </a>
+                    </div>
+
+
+
+                    <br />
+                    <h3 style="font-family:Barlow;">Information</h3>
                     <div class="row">
                         <a>
-                            <p style="color:white;">
+                            <p style="color:white;font-family:Barlow;">
                                 About Industrial Services <br />
-                                Astra Polytechnic Main Website <br />
-                                Contact
+                                Astra Polytechnic Main Website <br />  <br />
                             </p>
                         </a>
+
                     </div>
                 </div>
 
@@ -72,13 +104,27 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-12 d-flex align-items-stretch text-center">
-                    <span style="position: relative; left: 50%; transform: translateX(-50%);color:darkgray;">Copyright © 2024 Department Training & Production Astra Polytechnic</span>
+                    <span style="position: relative; left: 50%; transform: translateX(-50%);color:darkgray;font-family:Barlow;">Copyright © 2024 Astra Polytechnic</span>
                 </div>
             </div>
         </div>
 
     </div>
 </footer><!-- End Footer -->
+
+<style>
+    .socialmedia {
+        display: flex;
+        position: relative;
+    }
+
+        .socialmedia a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+</style>
 
 <script>
     loadProduk();
