--- a/IndustrialServices/Views/TipeFasilitas/Index.cshtml
+++ b/IndustrialServices/Views/TipeFasilitas/Index.cshtml
@@ -350,6 +350,7 @@
                                 <br />
 
                                 <!-- General Form Elements -->
+                                <input type="text" class="form-control" name="edit_id_tipe_fasilitas" id="edit_id_tipe_fasilitas" hidden>
                                 <div class="row mb-3">
                                     <label for="edit_tipe_fasilitas" class="col-sm-2 col-form-label">Type of Facility</label>
                                     <div class="col-sm-10">
