--- a/IndustrialServices/Views/Artikel/Index.cshtml
+++ b/IndustrialServices/Views/Artikel/Index.cshtml
@@ -49,7 +49,7 @@
                             <tr>
                                 <th scope="col">No</th>
                                 <th scope="col">Article Title</th>
-                                <th scope="col">Contributor Name</th>
+                                <th scope="col">Author</th>
                                 <th scope="col">Release Date</th>
                                 <th scope="col">Status</th>
                                 <th scope="col">Action</th>
@@ -90,43 +90,65 @@
                         method: "GET",
                         contentType: "application/json",
                         success: function (pengelola) {
+                            var peran = pengelola.data.peran;
                             var nama = pengelola.data.nama_pengelola;
                             var editButton = '';
                             var deleteButton = '';
                             var doneButton = '';
                             var detailButton = '';
 
-                            if (window.location.href === "https://localhost:7240/Artikel/Index") {
+                            var userRole = '@role';
+                            if (window.location.href === "https://localhost:7240/Artikel/Index" && userRole === "Contributor") {
                                 if (article.status === 1) {
+                                    editButton = '<a class="btn btn-primary" href="/Artikel/Draft?id=' + article.id_artikel + '"><i class="fas fa-edit"></i></a>';
+                                    deleteButton = '<button class="btn btn-danger" value="' + article.id_artikel + '" onclick="deleteArtikel(this.value)"><i class="fas fa-trash"></i></button>';
+                                } else if (article.status === 2) {
+                                    detailButton = '<a class="btn btn-primary" href="/Artikel/Detail?id=' + article.id_artikel + '"><i class="fa-regular fa-eye"></i></a>';
+                                    deleteButton = '<button class="btn btn-danger" value="' + article.id_artikel + '" onclick="deleteArtikel2(this.value)"><i class="fas fa-trash"></i></button>';
+                                }
+                            } else if (userRole === "Contributor") {
+                                if (article.status === 1) {
+                                    editButton = '<a class="btn btn-primary" href="Artikel/Draft?id=' + article.id_artikel + '"><i class="fas fa-edit"></i></a>';
+                                    deleteButton = '<button class="btn btn-danger" value="' + article.id_artikel + '" onclick="deleteArtikel(this.value)"><i class="fas fa-trash"></i></button>';
+                                } else if (article.status === 2) {
+                                    detailButton = '<a class="btn btn-primary" href="Artikel/Detail?id=' + article.id_artikel + '"><i class="fa-regular fa-eye"></i></a>';
+                                    deleteButton = '<button class="btn btn-danger" value="' + article.id_artikel + '" onclick="deleteArtikel2(this.value)"><i class="fas fa-trash"></i></button>';
+                                }
+                            }
+
+                            if (window.location.href === "https://localhost:7240/Artikel/Index" && userRole === "Admin") {
+                                if (article.status === 1) {
+                                    detailButton = '<a class="btn btn-secondary" href="Artikel/Detail?id=' + article.id_artikel + '"><i class="fa-regular fa-eye"></i></a>';
                                     editButton = '<a class="btn btn-primary" href="/Artikel/Draft?id=' + article.id_artikel + '"><i class="fas fa-edit"></i></a>';
                                     deleteButton = '<button class="btn btn-danger" value="' + article.id_artikel + '" onclick="deleteArtikel(this.value)"><i class="fas fa-trash"></i></button>';
                                     doneButton = '<button class="btn btn-success" value="' + article.id_artikel + '" onclick="doneArtikel(this.value)"><i class="fa-solid fa-check"></i></button>';
                                 } else if (article.status === 2) {
                                     detailButton = '<a class="btn btn-primary" href="/Artikel/Detail?id=' + article.id_artikel + '"><i class="fa-regular fa-eye"></i></a>';
-                                    deleteButton = '<button class="btn btn-danger" value="' + article.id_artikel + '" onclick="deleteArtikel(this.value)"><i class="fas fa-trash"></i></button>';
+                                    deleteButton = '<button class="btn btn-danger" value="' + article.id_artikel + '" onclick="deleteArtikel2(this.value)"><i class="fas fa-trash"></i></button>';
                                 }
-                            } else {
+                            } else if (userRole === "Admin") {
                                 if (article.status === 1) {
+                                    detailButton = '<a class="btn btn-secondary" href="Artikel/Detail?id=' + article.id_artikel + '"><i class="fa-regular fa-eye"></i></a>';
                                     editButton = '<a class="btn btn-primary" href="Artikel/Draft?id=' + article.id_artikel + '"><i class="fas fa-edit"></i></a>';
                                     deleteButton = '<button class="btn btn-danger" value="' + article.id_artikel + '" onclick="deleteArtikel(this.value)"><i class="fas fa-trash"></i></button>';
                                     doneButton = '<button class="btn btn-success" value="' + article.id_artikel + '" onclick="doneArtikel(this.value)"><i class="fa-solid fa-check"></i></button>';
                                 } else if (article.status === 2) {
                                     detailButton = '<a class="btn btn-primary" href="Artikel/Detail?id=' + article.id_artikel + '"><i class="fa-regular fa-eye"></i></a>';
-                                    deleteButton = '<button class="btn btn-danger" value="' + article.id_artikel + '" onclick="deleteArtikel(this.value)"><i class="fas fa-trash"></i></button>';
+                                    deleteButton = '<button class="btn btn-danger" value="' + article.id_artikel + '" onclick="deleteArtikel2(this.value)"><i class="fas fa-trash"></i></button>';
                                 }
                             }
 
                             var newRow = '<tr>' +
                                 '<td>' + (index + 1) + '</td>' +
                                 '<td>' + article.judul_artikel + '</td>' +
-                                '<td>' + nama + '</td>' +
+                                '<td>' + nama + ' ('+ peran + ')' + '</td>' +
                                 '<td>' + formattedDate + '</td>' +
                                 '<td>' + statusText + '</td>' +
                                 '<td>' +
+                                detailButton +
                                 editButton +
                                 deleteButton +
                                 doneButton +
-                                detailButton +
                                 '</td>' +
                                 '</tr>';
 
@@ -141,7 +163,41 @@
         });
     }
 
+
     function deleteArtikel(id) {
+        var hostname = "https://localhost:7033/";
+        var url = hostname + "DeleteArtikel?id=" + id;
+        var method = "POST";
+
+        // Konfirmasi sebelum menghapus menggunakan SweetAlert
+        Swal.fire({
+            title: 'Are you sure for deleting this Article?',
+            text: "This Article will be deleted permanently.",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, Delete!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                // Ajax untuk menghapus artikel
+                $.ajax({
+                    url: url,
+                    method: method,
+                    contentType: "application/json",
+                    success: function (data) {
+                        location.reload();
+                    },
+                    error: function (xhr, status, error) {
+                        console.error("Error deleting article:", error);
+                        // Tangani kesalahan jika terjadi saat menghapus artikel
+                    }
+                });
+            }
+        });
+    }
+
+    function deleteArtikel2(id) {
         var hostname = "https://localhost:7033/";
         var url = hostname + "DeleteArtikel?id=" + id;
         var method = "POST";
@@ -179,15 +235,41 @@
         var hostname = "https://localhost:7033/";
         var url = hostname + "DoneArtikel?id=" + id
         var method = "POST";
-        $.ajax({
-            url: url,
-            method: method,
-            contentType: "application/json",
-            success: function (data) {
-                location.reload();
-            },
+
+        Swal.fire({
+            title: 'Are you sure to publish this article?',
+            text: 'You won\'t be able to edit this article again!',
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, mark it as done!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                // Ajax untuk menyelesaikan artikel
+                $.ajax({
+                    url: url,
+                    method: method,
+                    contentType: "application/json",
+                    success: function (data) {
+                        // Tampilkan SweetAlert pemberitahuan berhasil
+                        Swal.fire(
+                            'Done!',
+                            'The article has been marked as done.',
+                            'success'
+                        ).then(function () {
+                            location.reload();
+                        });
+                    },
+                    error: function (xhr, status, error) {
+                        console.error("Error marking article as done:", error);
+                        // Tangani kesalahan jika terjadi saat menyelesaikan artikel
+                    }
+                });
+            }
         });
     }
+
 
     function getStatusText(status) {
         if (status === 1) {
