--- a/IndustrialServices/Views/FacultyMember/Index.cshtml
+++ b/IndustrialServices/Views/FacultyMember/Index.cshtml
@@ -53,6 +53,7 @@
                                 <th scope="col">Teacher's Name</th>
                                 <th scope="col">Areas of expertise</th>
                                 <th scope="col">Teacher's Photo</th>
+                                <th scope="col">Status</th>
                                 <th scope="col">Action</th>
                             </tr>
                         </thead>
@@ -78,6 +79,25 @@
 
         var fotopengajar = document.getElementById("foto_pengajar").files[0];
 
+        if (!(/^\d+$/.test(npk))) {
+            Swal.fire({
+                icon: 'error',
+                title: 'Warning!',
+                text: 'NPK must be a numeric value!',
+            });
+
+            return; // Keluar dari fungsi jika NPK bukan angka
+        }
+
+        if (npk == '' || nama_pengajar == '' || bidang_keahlian == '' || deskripsi_pengajar == '') {
+            Swal.fire({
+                icon: 'error',
+                title: 'Warning!',
+                text: 'Please fill in all fields!',
+            });
+            return; // Keluar dari fungsi jika NPK bukan angka
+        }
+
         // Jika foto_pengajar tidak null, upload foto
         if (fotopengajar != null) {
             uploadFoto(fotopengajar, function (uniqueFileName) {
@@ -93,23 +113,7 @@
                     deskripsi_pengajar: deskripsi_pengajar,
                     status: status
                 };
-                if (!(/^\d+$/.test(npk))) {
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Warning!',
-                        text: 'NPK must be a numeric value!',
-                    });
-                    return; // Keluar dari fungsi jika NPK bukan angka
-                }
 
-                if (npk == '' || nama_pengajar == '' || bidang_keahlian == '' || deskripsi_pengajar == '') {
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Warning!',
-                        text: 'Please fill in all fields!',
-                    });
-                    return; // Keluar dari fungsi jika NPK bukan angka
-                }
                 
 
                 $.ajax({
@@ -202,7 +206,7 @@
 
     function loadTenagaPengajar() {
         var hostname = "https://localhost:7033/";
-        var url = hostname + "GetAllFacultyMembers";
+        var url = hostname + "GetAllFacultyMembersinIndex";
         var method = "GET";
 
         $.ajax({
@@ -212,15 +216,30 @@
             success: function (data) {
                 var list = data.data;
                 list.forEach(function (pengajar, index) {
+                    var statusText = pengajar.status === 1 ? "Active" : "Non-active";  // Assuming "status" is the property
+
+                    var activateButton = pengajar.status === 0
+                        ? '<button class="btn btn-success activateFacultyMember" data-id_pengajar="' + pengajar.id_pengajar + '">Activate</button>'
+                        : '';
+
+                    var deleteButton = pengajar.status === 1
+                        ? '<button class="btn btn-danger" value="' + pengajar.id_pengajar + '" onclick="hapus(this.value)"><i class="fas fa-trash"></i></button>'
+                        : '';
+
+                    var editButton =
+                        '<button class="btn btn-primary editFacultyMember" data-id_pengajar="' + pengajar.id_pengajar + '"><i class="fas fa-edit"></i></button>' ;
+
                     var newRow = '<tr>' +
                         '<td>' + (index + 1) + '</td>' +
                         '<td>' + pengajar.npk + '</td>' +
                         '<td>' + pengajar.nama_pengajar + '</td>' +
                         '<td>' + pengajar.bidang_keahlian + '</td>' +
                         '<td><img src="/assets/img/' + pengajar.foto_pengajar + '" alt="Foto Pengajar" width="70" height="70"></td>' +
+                        '<td>' + statusText + '</td>' +  // Add this line for status
                         '<td>' +
-                        '<button class="btn btn-primary editFacultyMember" data-id_pengajar="' + pengajar.id_pengajar + '"><i class="fas fa-edit"></i></button>' +
-                        '<button class="btn btn-danger" value="' + pengajar.id_pengajar + '" onclick="hapus(this.value)"><i class="fas fa-trash"></i></button>' +
+                        editButton +
+                        deleteButton +
+                        activateButton +
                         '</td>' +
                         '</tr>';
 
@@ -231,6 +250,12 @@
                         var id_pengajar = $(this).data("id_pengajar");
                         loadEditTenagaPengajar(id_pengajar);
                     });
+
+                    // Event listener for activate button
+                    $('.activateFacultyMember[data-id_pengajar="' + pengajar.id_pengajar + '"]').click(function () {
+                        var id_pengajar = $(this).data("id_pengajar");
+                        activateFacultyMember(id_pengajar);
+                    });
                 });
             },
             error: function (xhr, status, error) {
@@ -239,6 +264,46 @@
         });
     }
 
+
+    function activateFacultyMember(id) {
+        Swal.fire({
+            title: 'Are you sure?',
+            text: 'This data will be activated!',
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, activate!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                var hostname = "https://localhost:7033/";
+                var url = hostname + "ActivateFacultyMember?id=" + id;  // Adjust the API endpoint based on your backend
+                var method = "POST";
+                $.ajax({
+                    url: url,
+                    method: method,
+                    contentType: "application/json",
+                    success: function (data) {
+                        Swal.fire(
+                            'Activated!',
+                            'Your data has been activated.',
+                            'success'
+                        ).then(() => {
+                            location.reload();
+                        });
+                    },
+                    error: function (xhr, status, error) {
+                        console.error("Error:", error);
+                        Swal.fire(
+                            'Error!',
+                            'Failed to activate data.',
+                            'error'
+                        );
+                    }
+                });
+            }
+        });
+    }
 
 
     function hapus(id) {
@@ -249,7 +314,8 @@
         // Konfirmasi sebelum menghapus menggunakan SweetAlert2
         Swal.fire({
             title: 'Are you sure for deleting this Faculty Member?',
-            icon: 'warning',
+            
+            : 'warning',
             showCancelButton: true,
             confirmButtonColor: '#d33',
             cancelButtonColor: '#3085d6',
@@ -322,59 +388,89 @@
         var npk = document.getElementById("editnpk").value;
         var nama_pengajar = document.getElementById("editnama_pengajar").value;
         var bidang_keahlian = document.getElementById("editbidang_keahlian").value;
-        var foto_pengajar = document.getElementById("editfoto_pengajar").value;
         var deskripsi_pengajar = document.getElementsByName("editdeskripsi_pengajar")[0].value;
         var status = document.getElementById("editstatus").value;
 
         var fotopengajar = document.getElementById("editfoto_pengajar").files[0];
 
-        var hostname = "https://localhost:7033/";
-        var url = hostname + "UpdateFacultyMember";
-        var method = "POST";
+        // If NPK is not a number, show a warning
+        if (!(/^\d+$/.test(npk))) {
+            Swal.fire({
+                icon: 'error',
+                title: 'Warning!',
+                text: 'NPK must be a numeric value!',
+            });
+            return; // Exit the function if NPK is not a number
+        }
 
-        var input = {
-            id_pengajar: id_pengajar,
-            npk: npk,
-            nama_pengajar: nama_pengajar,
-            bidang_keahlian: bidang_keahlian,
-            foto_pengajar: foto_pengajar,
-                        deskripsi_pengajar: deskripsi_pengajar,
-            status: status
-        };
+        // If any required field is empty, show a warning
+        if (npk == '' || nama_pengajar == '' || bidang_keahlian == '' || deskripsi_pengajar == '') {
+            Swal.fire({
+                icon: 'error',
+                title: 'Warning!',
+                text: 'Please fill in all fields!',
+            });
+            return; // Exit the function if any required field is empty
+        }
 
-        var data = JSON.stringify(input);
+        // Initialize uniqueFileName variable
+        var uniqueFileName = null;
 
-        $.ajax({
-            url: url,
-            method: method,
-            data: data,
-            contentType: "application/json",
-            success: function (data) {
-                if (data.status === 500) {
-                    // Tampilkan SweetAlert jika NPK sudah digunakan
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Warning!',
-                        text: 'NPK was already used!',
-                    });
-                } else {
-                    var check = 1;
+        // If a photo is selected, upload it and set uniqueFileName
+        if (fotopengajar != null) {
+            uploadFoto(fotopengajar, function (uploadedFileName) {
+                // Continue with saving data after successful file upload
+                uniqueFileName = uploadedFileName;
+                saveData();
+            });
+        } else {
+            // If no photo is selected, continue with saving data
+            saveData();
+        }
 
-                    if (fotopengajar == null) {
-                        check = 2;
-                    }
+        // Function to save data
+        function saveData() {
+            // Continue with saving data
+            var input = {
+                id_pengajar: id_pengajar,
+                npk: npk,
+                nama_pengajar: nama_pengajar,
+                bidang_keahlian: bidang_keahlian,
+                foto_pengajar: uniqueFileName, // Use the uploaded uniqueFileName
+                deskripsi_pengajar: deskripsi_pengajar,
+                status: status
+            };
 
-                    if (check === 1) {
-                        uploadFoto(fotopengajar);
-                    }
+            // Convert the input object to JSON
+            var data = JSON.stringify(input);
 
-                    if (check === 2) {
+            // Make the AJAX request
+            $.ajax({
+                url: "https://localhost:7033/UpdateFacultyMember", // Update the URL accordingly
+                method: "POST",
+                data: data,
+                contentType: "application/json",
+                success: function (data) {
+                    if (data.status === 500) {
+                        // Show SweetAlert if NPK is already used
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Warning!',
+                            text: 'NPK was already used!',
+                        });
+                    } else {
+                        // Navigate to the desired location after successful AJAX request
                         window.location.href = '/FacultyMember/Index';
                     }
-                }
-            },
-        });
+                },
+                error: function (xhr, status, error) {
+                    console.error(xhr.responseText);
+                    // Handle error if needed
+                },
+            });
+        }
     }
+
 
 
     function canceledit() {
@@ -382,7 +478,14 @@
         document.getElementById("editnama_pengajar").value = "";
         document.getElementById("editbidang_keahlian").value = "";
     }
-   
+    // Menambahkan event listener setelah DOM sepenuhnya dimuat
+    document.addEventListener('DOMContentLoaded', function () {
+        // Menambahkan event listener untuk menghandle input pada elemen dengan id "npk"
+        document.getElementById('npk').addEventListener('input', function () {
+            // Menghapus karakter non-numeric dari nilai input
+            this.value = this.value.replace(/[^0-9]/g, '');
+        });
+    });
 </script>
 
 
@@ -404,16 +507,16 @@
                                     <br />
 
                                     <!-- General Form Elements -->
-                                    <div class="row mb-3">
-                                        <label for="npk" class="col-sm-2 col-form-label">NPK</label>
-                                        <div class="col-sm-10">
-                                            <input type="text" class="form-control" name="npk" id="npk">
-                                        </div>
+                                <div class="row mb-3">
+                                    <label for="npk" class="col-sm-2 col-form-label">NPK</label>
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-control" name="npk" id="npk" maxlength="15" placeholder="Max Length of Input is 15 digits and numbers only" pattern="[0-9]*">
                                     </div>
+                                </div>
                                     <div class="row mb-3">
                                         <label for="nama_pengajar" class="col-sm-2 col-form-label">Teacher's Name</label>
                                         <div class="col-sm-10">
-                                            <input type="text" class="form-control" name="nama_pengajar" id="nama_pengajar">
+                                        <input type="text" class="form-control" name="nama_pengajar" id="nama_pengajar" maxlength="100" placeholder="Max Length of Input is 100 digits">
                                         </div>
                                     </div>
                                     <div class="row mb-3">
@@ -488,7 +591,7 @@
                                     <div class="row mb-3">
                                         <label for="npk" class="col-sm-2 col-form-label">NPK</label>
                                         <div class="col-sm-10">
-                                        <input type="text" class="form-control" name="editnpk" id="editnpk">
+                                        <input type="text" class="form-control" name="editnpk" id="editnpk" maxlength="15" placeholder="Max Length of Input is 15 digits">
                                         </div>
                                     </div>
                                     <div class="row mb-3">
@@ -500,7 +603,7 @@
                                     <div class="row mb-3">
                                         <label for="bidang_keahlian" class="col-sm-2 col-form-label">Areas of expertise</label>
                                         <div class="col-sm-10">
-                                        <select type="text" class="form-select" name="editbidang_keahlian" id="editbidang_keahlian">
+                                        <select type="text" class="form-control" name="editbidang_keahlian" id="editbidang_keahlian" disabled>
                                             <option>Select Areas of expertise</option>
                                                 <option value="Technical">Technical</option>
                                             <option value="Non-Technical">Non-Technical</option>
