--- a/IndustrialServices/Views/Home/Artikel.cshtml
+++ b/IndustrialServices/Views/Home/Artikel.cshtml
@@ -10,6 +10,24 @@
         <div class="container" style="padding-bottom:15px;font-family:Barlow;">
             <p style="margin-bottom: -3px;color:darkgray;">Industrial Services</p>
             <h5 style="color: black; font-family:Barlow; font-weight: 600; font-size: 36px; margin-bottom: 20px;">Article</h5>
+            <div class="col-sm-1" style="position:relative;top:30px;left:1190px;">
+                <select class="form-select" name="filter" id="filter">
+                    <option disabled>Sort:</option>
+                    <option value="bulan">Name</option>
+                    <option value="1">January</option>
+                    <option value="2">February</option>
+                    <option value="3">March</option>
+                    <option value="4">April</option>
+                    <option value="5">May</option>
+                    <option value="6">June</option>
+                    <option value="7">July</option>
+                    <option value="8">August</option>
+                    <option value="9">September</option>
+                    <option value="10">October</option>
+                    <option value="11">November</option>
+                    <option value="12">December</option>
+                </select>
+            </div>
         </div>
 
 
@@ -25,43 +43,75 @@
 </section>
 
 
-<footer id="footer" style="color:#ffffff;">
+<footer id="footer" style="color:#ffffff;font-family:Barlow;">
 
     <div class="footer-top" style="background:#01529C;">
         <div class="container">
             <div class="row justify-content-center">
 
-                <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Address</h3>
+                <div class="col-lg-4 col-md-6 footer-contact">
+                    <h3 style="font-family:Barlow;">Astra Polytechnic</h3>
                     <a href="https://maps.app.goo.gl/xG12byCagHAPUSuY9" target="_blank">
-                        <p style="color:white;">
-                            Cikarang Campus <br>
-                            Jl. Gaharu Blok F3 Delta Silicon II Cibatu,<br>
+                        <p style="color:white;font-family:Barlow;">
+                            <strong>Cikarang Campus</strong> <br>
+                            Gaharu Street Block F3 Delta Silicon II, Cibatu,<br>
                             South Cikarang, Bekasi Regency, <br>
                             West Java 17530 <br><br>
+
+                            <strong>Sunter Campus</strong> <br>
+                            Astra International Public LLC Complex, Building B,<br>
+                            Gaya Motor Raya Street No. 8, Sunter II, <br>
+                            Jakarta 14330.<br><br>
 
                         </p>
                     </a>
                 </div>
 
-                <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Contacts</h3>
-                    <p style="color:white;">
-                        <strong>Phone:</strong><a href="https://wa.me/6285156842086" style="color: white; text-decoration: underline;" target="_blank"> +62 888 7765 9821</a><br>
-                        <strong>Email:</strong> dpp@@astra.polytechnic.ac.id<br>
+                <div class="col-lg-4 col-md-6 footer-contact">
+                    <h3 style="font-family:Barlow;">Time of Service</h3>
+                    <p style="color:white;font-family:Barlow;">
+                        Monday - Friday (08:00 - 16:00)
                     </p>
+
                 </div>
 
-                <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Information</h3>
+                <div class="col-lg-4 col-md-6 footer-contact">
+                    <h3>Contacts</h3>
+                    <p style="color:white;font-family:Barlow;">
+                        Call Center : (021) 5022722 <br />
+                        WhatsApp : 085156842086 (message only) <br />
+                        Email :  dpp@astrapolytechnic.ac.id <br /> <br />
+                    </p>
+                    <div class="socialmedia" style="gap:15px;">
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: midnightblue; border: none;width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://www.instagram.com/astrapolytechnic/', '_blank');">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #FF0000; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://www.youtube.com/c/PolmanAstrachannel', '_blank');">
+                            <i class="fab fa-youtube" style="font-size: 24px; color: white;"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #4267B2; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://www.facebook.com/Astrapolytechnic/', '_blank');">
+                            <i class="fab fa-facebook-f" style="font-size: 24px; color: white;"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #1DA1F2; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://twitter.com/PoliteknikAstra/', '_blank');">
+                            <i class="fab fa-twitter" style="font-size: 24px; color: white;"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #25D366; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://api.whatsapp.com/send/?phone=6281295582134', '_blank');">
+                            <i class="fab fa-whatsapp" style="font-size: 24px; color: white;"></i>
+                        </a>
+                    </div>
+
+
+
+                    <br />
+                    <h3 style="font-family:Barlow;">Information</h3>
                     <div class="row">
                         <a>
-                            <p style="color:white;">
+                            <p style="color:white;font-family:Barlow;">
                                 About Industrial Services <br />
-                                Astra Polytechnic Main Website <br />
-                                Contact
+                                Astra Polytechnic Main Website <br />  <br />
                             </p>
                         </a>
+
                     </div>
                 </div>
 
@@ -70,7 +120,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-12 d-flex align-items-stretch text-center">
-                    <span style="position: relative; left: 50%; transform: translateX(-50%);color:darkgray;">Copyright © 2024 Department Training & Production Astra Polytechnic</span>
+                    <span style="position: relative; left: 50%; transform: translateX(-50%);color:darkgray;font-family:Barlow;">Copyright © 2024 Astra Polytechnic</span>
                 </div>
             </div>
         </div>
@@ -78,15 +128,31 @@
     </div>
 </footer><!-- End Footer -->
 
+<style>
+    .socialmedia {
+        display: flex;
+        position: relative;
+    }
+
+        .socialmedia a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+</style>
 
 <script>
-    loadArtikels();
+    var filter = "bulan";
+    loadArtikels(filter);
 
-    function loadArtikels() {
+    function loadArtikels(filter) {
         var hostname = "https://localhost:7033/";
         var url = hostname + "GetAllArtikelsDone";
         var method = "GET";
-
+        if (filter) {
+            url += "?filter=" + filter;
+        }
         $('#article-list').empty();
 
         $.ajax({
@@ -96,44 +162,61 @@
             success: function (data) {
                 var articleList = data.data;
 
-                articleList.forEach(function (article) {
-                    // Ubah format tanggal
-                    var formattedDate = new Date(article.tanggal_rilis).toLocaleDateString('en-US', {
-                        day: 'numeric',
-                        month: 'long',
-                        year: 'numeric'
-                    });
-
-                    var maxTitleLength = 45; // Set the maximum length for the title
-
-                    // Truncate the title if it exceeds the maximum length
-                    var truncatedTitle = article.judul_artikel.length > maxTitleLength ?
-                        article.judul_artikel.substring(0, maxTitleLength) + '...' :
-                        article.judul_artikel;
-
-                    var articleHtml =
-                        '<div class="col-6 col-lg-4 mb-5 mb-md-5">' +
-                        '<a class="card-link" class="card-img d-block sk-thumbnail img-ratio-3 rounded-bottom-0" href="/Home/ArtikelDetail?id=' + article.id_artikel + '">' +
-                        '<div class="card border rounded-3 sk-fade h-100">' +
-                        '<div class="card-zoom position-relative rounded-bottom-0">' +
-                        '<img class="shadow-light-lg img-fluid zoom-on-hover" src="/assets/img/' + article.sampul_artikel + '" alt="Article Image" />' +
-                        '<div class="card-footer p-3">' +
-                        '<h6 class="fw-bolder line-clamp-2 mb-0" style="font-family:Barlow;">' + truncatedTitle + '</h6>' +
-                        '<span class="text-muted" style="font-size:14px;font-family:Barlow;">' + formattedDate + '</span>' +
+                if (articleList.length === 0) {
+                    // No articles found, display a card or message
+                    var noArticleHtml =
+                        '<div class="col-12 text-center" >' +
+                        '<div class="card border rounded-3 p-4" style="background-color:rgba(0,0,0,0.1); box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">' +
+                        '<h4 class="fw-bold mb-3" style="font-family: Barlow;">No articles found</h4>' +
+                        '<p class="text-muted">There are no articles matching the specified filter.</p>' +
                         '</div>' +
-                        '</div>' +
-                        '</div>' +
-                        '</a>' +
                         '</div>';
 
-                    $('#article-list').append(articleHtml);
-                });
+                    $('#article-list').append(noArticleHtml);
+                } else {
+                    // Display articles
+                    articleList.forEach(function (article) {
+                        var formattedDate = new Date(article.tanggal_rilis).toLocaleDateString('en-US', {
+                            day: 'numeric',
+                            month: 'long',
+                            year: 'numeric'
+                        });
+
+                        var maxTitleLength = 45;
+                        var truncatedTitle = article.judul_artikel.length > maxTitleLength ?
+                            article.judul_artikel.substring(0, maxTitleLength) + '...' :
+                            article.judul_artikel;
+
+                        var articleHtml =
+                            '<div class="col-6 col-lg-4 mb-5 mb-md-5">' +
+                            '<a class="card-link" class="card-img d-block sk-thumbnail img-ratio-3 rounded-bottom-0" href="/Home/ArtikelDetail?id=' + article.id_artikel + '">' +
+                            '<div class="card border rounded-3 sk-fade h-100">' +
+                            '<div class="card-zoom position-relative rounded-bottom-0">' +
+                            '<img class="shadow-light-lg img-fluid zoom-on-hover" src="/assets/img/' + article.sampul_artikel + '" alt="Article Image" />' +
+                            '<div class="card-footer p-3">' +
+                            '<h6 class="fw-bolder line-clamp-2 mb-0" style="font-family:Barlow;">' + truncatedTitle + '</h6>' +
+                            '<span class="text-muted" style="font-size:14px;font-family:Barlow;">' + formattedDate + '</span>' +
+                            '</div>' +
+                            '</div>' +
+                            '</div>' +
+                            '</a>' +
+                            '</div>';
+
+                        $('#article-list').append(articleHtml);
+                    });
+                }
             },
             error: function (xhr, status, error) {
                 console.error("Error:", error);
             }
         });
     }
+
+    $("#filter").change(function () {
+        // Panggil fungsi loadTenagaPengajarTechnical saat ada perubahan pada elemen <select>
+        var selectedFilter = $(this).val();
+        loadArtikels(selectedFilter);
+    });
 
 </script>
 
