--- a/IndustrialServices/Views/Home/Index.cshtml
+++ b/IndustrialServices/Views/Home/Index.cshtml
@@ -20,75 +20,79 @@
 </div>
 
 
-<section id="hero" style="padding:25px;">
+<section id="hero" style="padding:0px;">
     <section id="home" class="home">
-        <br />
-        <br />
-        <div class="container-lg">
+        <section class="services" style="font-family:Barlow;">
+        <div class="container">
+                <div class="row align-items-end mb-4 mb-md-7">
+                    <div class="col-md mb-4 mb-md-0">
+                        <h2 class="fw-bolder mb-1" style="font-family:Barlow;">The Services We Provide</h2>
+                    </div>
+                </div>
             <div class="row">
-                <div class="col-lg-6">
-                    <div class="card" style="background-color: #3498db;">
-                        <div class="card-body">
-                            <h5 class="card-title text-white" style="padding:20px; font-family:Barlow; font-size:20px;">The Services We Provide</h5>
-                            <div class="container mt-5 mb-5">
-
-                                <div class="row g-12 justify-content-center">
-                                    <div class="col col-lg-3">
-                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
-                                            <div class="card-body">
-                                    </div>
-                                </div>
-                                    </div>
-
-                                    <div class="col col-lg-3">
-                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
-                                            <div class="card-body">
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col col-lg-3">
-                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
-                                            <div class="card-body">
-                                            </div>
-                                        </div>
-                                    </div>
-
-
-                                </div>
-
-
-                            </div>
-                        </div>
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" >
+                        <div class="icon-box" style="border-radius: 15px;">
+                            <div class="icon"><i class="bi bi-tools"></i></div>
+                            <h4><a asp-action="Fasilitas" asp-controller="Home" style="font-family:Barlow;">Products</a></h4>
+                            <p>Production results of Astra Polytechnic that have been made, such as machinery, manufacturing equipment, heavy equipment, information systems, etc.</p>
                     </div>
                 </div>
 
-                <div class="col-lg-6">
-                    <div class="card" style="background-color: #3498db;">
-                        <div class="card-body">
-                            <h5 class="card-title text-white" style="padding:20px; font-family:Barlow; font-size:20px;">Current Training</h5>
-                            <div class="container mt-5 mb-5">
-                                <div class="row g-4">
-                                    <div id="sug-pelatihan">
-                                    
-                                    </div>
-   
-
-
-
-                                </div>
-                            </div>
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                        <div class="icon-box" style="border-radius: 15px;">
+                            <div class="icon" ><i class="bi bi-tools"></i></div>
+                            <h4><a asp-action="Produk" asp-controller="Home" style="font-family:Barlow;">Facility</a></h4>
+                            <p>Astra Polytechnic Training Facilities such as machinery, manufacturing equipment, etc.</p>
                         </div>
                     </div>
-                </div>
+
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                        <div class="icon-box" style="border-radius: 15px;">
+                            <div class="icon"><i class="fa-solid fa-graduation-cap"></i></div>
+                            <h4><a href="javascript:void(0);" onclick="showBidangKeahlian()" style="font-family: Barlow;">Training</a></h4>
+                            <p>Tangible manifestation of the development program training and certification competency development programs from the technical and management that reaches the entire scope of scope of industry and educational institutions.</p>
+                        </div>
+                    </div>
 
             </div>
         </div>
+        </section>
 
 
 
     </section>
 </section>
+
+<div class="modal fade" id="showBidangKeahlianModal" tabindex="-1" role="dialog" aria-labelledby="showBidangKeahlianModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title" id="showBidangKeahlianModalLabel" style="font-size: 28px; font-family: Barlow">Areas of expertise for Trainings</h1>
+            </div>
+                    <section class="services" style="font-family:Barlow;">
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                            <div class="icon-box" style="border-radius: 15px;">
+                                <div class="icon"><i class="fa-solid fa-graduation-cap"></i></div>
+                                    <h4><a asp-action="KalenderTechnical" asp-controller="Home" style="font-family: Barlow;">Technical Trainings</a></h4>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                            <div class="icon-box" style="border-radius: 15px;">
+                                <div class="icon"><i class="fa-solid fa-graduation-cap"></i></div>
+                                    <h4><a asp-action="KalenderNonTechnical" asp-controller="Home" style="font-family: Barlow;">Non-Technical Trainings</a></h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </section>
+        </div>
+    </div>
+</div>
 
 <section id="hero" style="padding:0px;background-color:rgba(0,0,0,0.05);">
     <section id="home" class="home">
@@ -161,9 +165,37 @@
                     <p style="color:white;font-family:Barlow;">
                         Monday - Friday (08:00 - 16:00)
                     </p>
+
                 </div>
 
                 <div class="col-lg-4 col-md-6 footer-contact">
+                    <h3>Contacts</h3>
+                    <p style="color:white;font-family:Barlow;">
+                        Call Center : (021) 5022722 <br />
+                        WhatsApp : 085156842086 (message only) <br />
+                        Email :  dpp@astrapolytechnic.ac.id <br /> <br />
+                    </p>
+                    <div class="socialmedia" style="gap:15px;">
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: midnightblue; border: none;width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://www.instagram.com/astrapolytechnic/', '_blank');">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #FF0000; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://www.youtube.com/c/PolmanAstrachannel', '_blank');">
+                            <i class="fab fa-youtube" style="font-size: 24px; color: white;"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #4267B2; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://www.facebook.com/Astrapolytechnic/', '_blank');">
+                            <i class="fab fa-facebook-f" style="font-size: 24px; color: white;"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #1DA1F2; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://twitter.com/PoliteknikAstra/', '_blank');">
+                            <i class="fab fa-twitter" style="font-size: 24px; color: white;"></i>
+                        </a>
+                        <a class="btn btn-primary btn-lg btn-floating rounded-circle" style="background-color: #25D366; border: none; width: 50px; height: 50px;" role="button" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://api.whatsapp.com/send/?phone=6281295582134', '_blank');">
+                            <i class="fab fa-whatsapp" style="font-size: 24px; color: white;"></i>
+                        </a>
+                    </div>
+
+
+
+                    <br/>
                     <h3 style="font-family:Barlow;">Information</h3>
                     <div class="row">
                         <a>
@@ -172,12 +204,7 @@
                                 Astra Polytechnic Main Website <br />  <br />
                         </p>
                         </a>
-                        <h3>Contacts</h3>
-                        <p style="color:white;font-family:Barlow;">
-                            Call Center : (021) 5022722 <br />
-                            WhatsApp : 085156842086 (message only) <br />
-                            Email :  dpp@astrapolytechnic.ac.id <br /> <br />
-                        </p>
+
                     </div>
                 </div>
 
@@ -186,7 +213,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-12 d-flex align-items-stretch text-center">
-                    <span style="position: relative; left: 50%; transform: translateX(-50%);color:darkgray;font-family:Barlow;">Copyright © 2024 Department Training & Production Astra Polytechnic</span>
+                    <span style="position: relative; left: 50%; transform: translateX(-50%);color:darkgray;font-family:Barlow;">Copyright © 2024 Astra Polytechnic</span>
                 </div>
             </div>
         </div>
@@ -213,9 +240,27 @@
         transform: scale(1.05);
         transition: transform 0.5s ease;
     }
+
+    .socialmedia {
+        display: flex;
+        position:relative;
+
+    }
+
+        .socialmedia a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+        }
 </style>
 
 <script>
+       function showBidangKeahlian(){
+        $('#showBidangKeahlianModal').modal("show");
+       }
+
     loadArtikels();
 
     function loadArtikels() {
