--- a/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
+++ b/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
@@ -70,7 +70,7 @@
             <div class="align-items-center">
 
                         <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#">
-                    <span class="d-none d-md-block" style="position:relative; right:20px;">Welcome! @Context.Session.GetString("Nama") (@Context.Session.GetString("Role"))</span>
+                    <span class="d-none d-md-block" style="position:relative; right:20px;">@Context.Session.GetString("Nama") (@Context.Session.GetString("Role"))</span>
                         </a>
             </div>
         </div>
