--- a/IndustrialServices/Views/TipeProduk/Index.cshtml
+++ b/IndustrialServices/Views/TipeProduk/Index.cshtml
@@ -355,7 +355,8 @@
                                 <hr />
                                 <br />
 
-                                <!-- General Form Elements -->
+                                
+                                <input type="text" class="form-control" name="edit_id_tipe_produk" id="edit_id_tipe_produk" hidden>
                                 <div class="row mb-3">
                                     <label for="edit_tipe_produk" class="col-sm-2 col-form-label">Type of Product</label>
                                     <div class="col-sm-10">
