--- a/IndustrialServices/wwwroot/Content/css/style.css
+++ b/IndustrialServices/wwwroot/Content/css/style.css
@@ -718,6 +718,32 @@ section {
   color: #848484;
 }
 
+.modal-body .icon-boxes .icon-box {
+    text-align: center;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    padding: 40px 30px;
+    width: 100%;
+}
+
+    .modal-body .icon-boxes .icon-box i {
+        font-size: 40px;
+        color: #1977cc;
+        margin-bottom: 30px;
+    }
+
+    .modal-body .icon-boxes .icon-box h4 {
+        font-size: 20px;
+        font-weight: 700;
+        margin: 0 0 30px 0;
+    }
+
+    .modal-body .icon-boxes .icon-box p {
+        font-size: 15px;
+        color: #848484;
+    }
+
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
